# jornais

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs  model.rs  newspapers.rs
