[package]
name = "jornais"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tl = "0.7.7"
colored = "2.0.4"
sqlx = { version = "0.7", features = [ "runtime-tokio", "mysql", "macros", "chrono" ] }
serde = "1.0.183"
serde_json = "1.0.104"
chrono = "0.4.26"
